--- a/src/components/Button/Button.style.css
+++ b/src/components/Button/Button.style.css
@@ -5,10 +5,10 @@
     justify-content: center;
     color: #385170;
     background-color: whitesmoke;
-    max-width: 120px;
+    max-width: 150px;
     width: 100%;
     height: 50px;
-    border-radius: 5%;
+    border-radius: 30px;
     margin: auto;
     cursor: pointer;
 }
