--- a/src/features/ListaTaskova/ListaTaskova.style.css
+++ b/src/features/ListaTaskova/ListaTaskova.style.css
@@ -54,3 +54,16 @@ h2 {
     width: 30px;
     height: 30px;
 }
+
+.taskStyle input {
+    width: 2.5em;
+    height: 2.5em;
+    background-color: lightgray;
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 3px solid greenyellow;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+}
