Add features for Pocetna and KreirajTask page

--- a/src/features/KreirajTask/KreirajTask.style.css
+++ b/src/features/KreirajTask/KreirajTask.style.css
@@ -17,6 +17,7 @@
     max-width: 800px;
     width: 100%;
     background-color: whitesmoke;
+    color: #385170;
     height: 40px;
     font-weight: bold;
     font-size: large;
