--- a/src/components/Button/Button.style.css
+++ b/src/components/Button/Button.style.css
@@ -3,8 +3,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #385170;
     background-color: whitesmoke;
+    color: #385170;
+    font-weight: bold;
     max-width: 150px;
     width: 100%;
     height: 50px;
