--- a/src/features/ListaTaskova/ListaTaskova.style.css
+++ b/src/features/ListaTaskova/ListaTaskova.style.css
@@ -35,6 +35,12 @@ h2 {
     width: 400px;
 }
 
+.taskListBox {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .taskStyle {
     background-color: whitesmoke;
     color: #385170;
@@ -45,7 +51,7 @@ h2 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
     justify-content: space-between;
 }
 
@@ -55,15 +61,12 @@ h2 {
     height: 30px;
 }
 
-.taskStyle input {
-    width: 2.5em;
-    height: 2.5em;
-    background-color: lightgray;
-    border-radius: 50%;
-    vertical-align: middle;
+.spanTaskBox {
+    width: 20px;
+    height: 20px;
     border: 3px solid greenyellow;
-    appearance: none;
-    -webkit-appearance: none;
-    outline: none;
-    cursor: pointer;
+    border-radius: 50%;
+    background-color: lightgray;
+    padding: 5px;
+    margin-left: 10px;
 }
