--- a/src/features/ListaTaskova/ListaTaskova.style.css
+++ b/src/features/ListaTaskova/ListaTaskova.style.css
@@ -70,3 +70,23 @@ h2 {
     padding: 5px;
     margin-left: 10px;
 }
+
+.onClickSpan {
+    width: 20px;
+    height: 20px;
+    border: 3px solid lightgray;
+    border-radius: 50%;
+    background-color: greenyellow;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+.noTasksStyle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 30px;
+}
