--- a/src/features/AboutMe/AboutMe.style.css
+++ b/src/features/AboutMe/AboutMe.style.css
@@ -8,6 +8,9 @@
 }
 
 .aboutDivStyle img {
-    max-width: 120px;
+    max-width: 155px;
     width: 100%;
+    height: 160px;
+    border-radius: 50%;
+    border: 5px solid greenyellow;
 }
